--- a/serwis.yaml
+++ b/serwis.yaml
@@ -26,7 +26,7 @@ metadata:
   name: nginx-svc
 spec:
   selector:
-    app.kubernetes.io/name: nginx
+    app: nginx
   ports:
     - protocol: TCP
       port: 80
