--- a/baza.yaml
+++ b/baza.yaml
@@ -1,37 +1,10 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: mysql-secret
-type: Opaque
-data:
-  # Use `echo -n 'your-password' | base64` to generate these values
-  mysql-root-password: <base64-encoded-password>
-  mysql-user: <base64-encoded-username>
-  mysql-password: <base64-encoded-user-password>
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: mysql
-spec:
-  ports:
-  - port: 3306
-  clusterIP: None
-  selector:
-    app: mysql
-
----
-
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: mysql
   labels:
     app: mysql
 spec:
-  serviceName: "mysql"
   replicas: 1
   selector:
     matchLabels:
@@ -43,54 +16,14 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: mysql:5.7
+        image: mysql:latest
         env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: mysql-root-password
-        - name: MYSQL_USER
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: mysql-user
-        - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: mysql-password
-        ports:
-        - containerPort: 3306
-          name: mysql
-        volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
+          - name: MYSQL_ROT_PASSWORD
+            value: secretpass
         resources:
           requests:
             memory: "512Mi"
             cpu: "100m"
           limits:
             memory: "512Mi"
-            cpu: "100m
-  volumeClaimTemplates:
-  - metadata:
-      name: mysql-persistent-storage
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 10Gi
-
----
-
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pv-claim
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
+            cpu: "100m"
